project/slurm/slurm-2149.err
W1204 20:38:48.906000 140112349100928 torch/distributed/run.py:779] 
W1204 20:38:48.906000 140112349100928 torch/distributed/run.py:779] *****************************************
W1204 20:38:48.906000 140112349100928 torch/distributed/run.py:779] Setting OMP_NUM_THREADS environment variable for each process to be 1 in default, to avoid your system being overloaded, please further tune the variable for optimal performance in your application as needed. 
W1204 20:38:48.906000 140112349100928 torch/distributed/run.py:779] *****************************************
  File "/homes/iws/abatur/cse599o/cse599o/project/fsdp_train_4gpu.py", line 83
    n_positions=SEQ_LEN, vocab_size=VOCAB_SIZE, **use_cache=False**) # <-- ADD THIS
                             File "/homes/iws/abatur/cse599o/cse599o/project/fsdp_train_4gpu.py", line 83
     File "/homes/iws/abatur/cse599o/cse599o/project/fsdp_train_4gpu.py", line 83
       File "/homes/iws/abatur/cse599o/cse599o/project/fsdp_train_4gpu.py", line 83
        n_positions=SEQ_LEN, vocab_size=VOCAB_SIZE, **use_cache=False**) # <-- ADD THIS
       n_positions=SEQ_LEN, vocab_size=VOCAB_SIZE, **use_cache=False**) # <-- ADD THIS
 n_positions=SEQ_LEN, vocab_size=VOCAB_SIZE, **use_cache=False**) # <-- ADD THIS
                                                                                   ^       ^      ^    ^ ^    ^ ^        ^        ^       ^       ^    ^  ^^  ^ ^^ ^^^  ^ ^^ ^^^^^ ^^^^^ ^^^ ^^^^^^^
^^^^^^^^^SyntaxError: ^cannot assign to keyword argument unpacking^^^^^


^^^SyntaxError^SyntaxError: ^: cannot assign to keyword argument unpacking^cannot assign to keyword argument unpacking
^^
^^
SyntaxError: cannot assign to keyword argument unpacking
E1204 20:38:49.278000 140112349100928 torch/distributed/elastic/multiprocessing/api.py:833] failed (exitcode: 1) local_rank: 0 (pid: 1259404) of binary: /homes/iws/abatur/.venv/bin/python3
Traceback (most recent call last):
  File "/homes/iws/abatur/.venv/bin/torchrun", line 10, in <module>
    sys.exit(main())
             ^^^^^^
  File "/homes/iws/abatur/.venv/lib64/python3.12/site-packages/torch/distributed/elastic/multiprocessing/errors/__init__.py", line 348, in wrapper
    return f(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^
  File "/homes/iws/abatur/.venv/lib64/python3.12/site-packages/torch/distributed/run.py", line 901, in main
    run(args)
  File "/homes/iws/abatur/.venv/lib64/python3.12/site-packages/torch/distributed/run.py", line 892, in run
    elastic_launch(
  File "/homes/iws/abatur/.venv/lib64/python3.12/site-packages/torch/distributed/launcher/api.py", line 133, in __call__
    return launch_agent(self._config, self._entrypoint, list(args))
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/homes/iws/abatur/.venv/lib64/python3.12/site-packages/torch/distributed/launcher/api.py", line 264, in launch_agent
    raise ChildFailedError(
torch.distributed.elastic.multiprocessing.errors.ChildFailedError: 
============================================================
/homes/iws/abatur/cse599o/cse599o/project/fsdp_train_4gpu.py FAILED
------------------------------------------------------------
Failures:
[1]:
  time      : 2025-12-04_20:38:49
  host      : tempura.cs.washington.edu
  rank      : 1 (local_rank: 1)
  exitcode  : 1 (pid: 1259405)
  error_file: <N/A>
  traceback : To enable traceback see: https://pytorch.org/docs/stable/elastic/errors.html
[2]:
  time      : 2025-12-04_20:38:49
  host      : tempura.cs.washington.edu
  rank      : 2 (local_rank: 2)
  exitcode  : 1 (pid: 1259406)
  error_file: <N/A>
  traceback : To enable traceback see: https://pytorch.org/docs/stable/elastic/errors.html
[3]:
  time      : 2025-12-04_20:38:49
  host      : tempura.cs.washington.edu
  rank      : 3 (local_rank: 3)
  exitcode  : 1 (pid: 1259407)
  error_file: <N/A>
  traceback : To enable traceback see: https://pytorch.org/docs/stable/elastic/errors.html
------------------------------------------------------------
Root Cause (first observed failure):
[0]:
  time      : 2025-12-04_20:38:49
  host      : tempura.cs.washington.edu
  rank      : 0 (local_rank: 0)
  exitcode  : 1 (pid: 1259404)
  error_file: <N/A>
  traceback : To enable traceback see: https://pytorch.org/docs/stable/elastic/errors.html
============================================================
